Added game image upload API handler
