# internal/app/game-library-api/model/upload.go
@@ -1,0 +1,9 @@
+package model
+
+// File represents an uploaded file
+type File struct {
+	FileName string
+	FileID   string
+	FileURL  string
+	Type     string
+}
